# petal

./: .candle.json  .clangd  .gitignore  .gitleaks.toml  .mcp.json  AI_CHANGELOG.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DebuggingPlan0214.md  Eval_0214.md  Goals_03_2026.md  LICENSE  LISP_PETAL_SPEC.md  Makefile  README.md  compile_commands.json  package-lock.json  package.json  tsconfig.json  vitest.config.mjs
.claude/: settings.json
apps/petal-diagram-canvas/rust/: Cargo.toml
apps/petal-diagram-canvas/rust/src/: lib.rs
apps/petal-sdl/: Cargo.toml
apps/petal-sdl/docs/: agent-protocol.md  design.md  game-dev-guide.md
apps/petal-sdl/examples/: breakout.ptl  browser.ptl  cc_10_print.ptl  cc_differential_growth.ptl  cc_metaballs.ptl  cc_reaction_diffusion.ptl  dodge.ptl  flappy.ptl  focus_form.ptl  invaders.ptl  noc_cloth.ptl  noc_elementary_ca.ptl  noc_flocking.ptl  noc_flow_field.ptl  noc_forces.ptl  noc_fractal_tree.ptl  noc_game_of_life.ptl  noc_mutual_attraction.ptl  noc_noise_landscape.ptl  noc_oscillation.ptl  noc_particle_system.ptl  noc_random_walker.ptl  noc_springs.ptl  noc_vectors.ptl  paint.ptl  particles.ptl  pong.ptl  snake.ptl  tetris.ptl
apps/petal-sdl/src/: commands.rs  font.rs  game_loop.rs  input.rs  native_fns.rs  protocol.rs  renderer.rs  screenshot.rs
benchmarks/: arith.ptl  particles.ptl
cpp-impl/: Makefile  ast.cpp  ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  petal  value.cpp  value.h
docs/: Architecture.md  Builtins.md  CLI.md  Function_Overloading.md  Game_Framework.md  Getting_Started.md  Language_Guide.md  MutabilityPlan.md  PETAL_GOALS.md  PETAL_SPEC.md  Playground.md  README.md  building-apps.md  building-on-integrations.md  bytecode-status.md  creative-coding-evaluation.md  creative-coding-language-ideas.md  debug-protocol.md  debugging-visibility.md  embedding-guide.md  ffi.md  function-overloading.md  goal-based-editing.md  goals-progress.md  goals.md  ir-as-target.md  language-guide.md  module-system.md  program-modification.md  rebind-operator.md  refactor-verification-plan.md  stdlib.json  stem-syntax-migration.md
editor-support/: README.md
editor-support/tree-sitter-petal/: .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
editor-support/tree-sitter-petal/bindings/rust/: build.rs  lib.rs
editor-support/tree-sitter-petal/queries/: highlights.scm
editor-support/tree-sitter-petal/src/: grammar.json  node-types.json  parser.c
editor-support/tree-sitter-petal/test/corpus/: basics.txt
examples/: README.md  calculator.ptl  closures.ptl  color_gradient.ptl  control_flow.ptl  differentiation.ptl  enums.ptl  fibonacci.ptl  fizzbuzz.ptl  for_expression.ptl  functions.ptl  game_of_life.ptl  imports.ptl  lists.ptl  map_range_demo.ptl  noise_field.ptl  particles.ptl  pattern_matching.ptl  reactive_ui.ptl  records.ptl  state.ptl  state_machine.ptl  text_utils.ptl  (+3 more)
impls/petal_impl_1/: Cargo.toml  README.md  SYNTAX.md
impls/petal_impl_1/examples/: arithmetic.ptl  calculator.ptl  control_flow.ptl  differentiation_demo.rs  fizzbuzz.ptl  functions.ptl  game_of_life.ptl  hello.ptl  lists.ptl  live_edit_demo.rs  maps.ptl  math.ptl  nested_state.ptl  particles.ptl  per_iteration_state.ptl  provenance.ptl  state.ptl
impls/petal_impl_1/src/: differentiate.rs  env.rs  error.rs  eval.rs  heap.rs  lib.rs  live_edit.rs  main.rs  parse.rs  program.rs  projection.rs  provenance.rs  source_map.rs  stack.rs  value.rs
petal-fps/: Cargo.toml  LANGUAGE_IDEAS.md
petal-fps/examples/: cyberpunk_city.ptl  debug_state.ptl  debug_state2.ptl  fps_game.ptl
petal-fps/src/: commands.rs  renderer.rs  screenshot.rs
petal-lsp/: Cargo.toml
petal-lsp/src/: document.rs  lib.rs  lsp_types.rs  protocol.rs  server.rs
petal-lsp/tests/: lsp_tests.rs
petal-query/: Cargo.toml  README.md
petal-query/src/: cache.rs  cache_control.rs  gpp.rs  lib.rs  provider.rs  wire.rs
petal-ui/: Cargo.toml
petal-ui/prelude/: ui.ptl
petal-ui/src/: draw.rs  harness.rs  host_data.rs  input.rs  lib.rs  pending.rs
petal-ui/tests/: host_data.rs  prelude.rs
rust/: Cargo.toml
rust/prelude/: std.ptl
rust/src/: ast.rs  builtins.rs  cli.rs  compiler.rs  constant_table.rs  cst.rs  cst_project.rs  desugar.rs  diagnostic.rs  dot_graph.rs  env.rs  eval.rs  execution_context.rs  extract.rs  goal_based_editing.rs  handle.rs  heap.rs  hot_reload.rs  inspect.rs  ir_display.rs  ir_serialize.rs  ir_validate.rs  lexer.rs  lib.rs  lint.rs  module.rs  native_fn.rs  parse.rs  program.rs  program_analysis.rs  resource_table.rs  rewrite.rs  source_map.rs  stack.rs  stats.rs  symbol.rs  trace.rs  transfer_state.rs  trivia.rs  types.rs  (+2 more)
rust/src/backend/: calls.rs  errors.rs  mod.rs  ops.rs  pattern.rs
rust/src/backend/bytecode/: disasm.rs  escape.rs  fuzz.rs  isa.rs  lastuse.rs  lower.rs  mod.rs  tests.rs  vm.rs
rust/src/backend/bytecode/vm/: calls.rs  dispatch.rs  frame.rs  intrinsics.rs  mod.rs  native.rs
rust/src/backend/graph/: call.rs  error.rs  exec.rs  loops.rs  mod.rs  ops.rs  pattern.rs  state.rs
rust/src/builtins/: autodiff.rs  collections.rs  color.rs  creative_coding.rs  handle.rs  io.rs  math.rs  mod.rs  noise.rs  output.rs  pending.rs  vec2.rs
rust/src/cli/: args.rs  handlers.rs  mod.rs
rust/src/compiler/: expr.rs  function.rs  mod.rs  phi.rs  stmt.rs
rust/src/cst/: driver.rs  events.rs  green.rs  mod.rs  red.rs
rust/src/env/: fork.rs  gc.rs  host_io.rs  mod.rs  run.rs  state_json.rs  tests.rs
rust/src/eval/: call.rs  error.rs  exec.rs  loops.rs  mod.rs  ops.rs  pattern.rs  state.rs
rust/src/lint/: mod.rs  rebind.rs  reindent.rs
rust/src/typecheck/: mod.rs  unused.rs
rust/tests/: handles.rs  lint.rs  modules.rs  native_fn.rs  optional_commas.rs  pending_report.rs  script_cases.rs  state_lifecycle.rs
sample-apps/petal-fps/: Cargo.toml  README.md  run.sh
sample-apps/petal-fps/examples/: fps_game.ptl
sample-apps/petal-fps/src/: commands.rs  font.rs  framebuffer.rs  game_loop.rs  host.rs  input.rs  main.rs  native_fns.rs  protocol.rs  renderer.rs
(+729 files in other folders)
