[package]
name = "petal-fps"
version = "0.1.0"
edition = "2024"

[dependencies]
petal = { path = "../rust" }
sdl2 = { version = "0.37", features = ["image", "ttf"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
