[package]
name = "petal-query"
version = "0.1.0"
edition = "2024"
description = "React-Query-style async data provider for Petal UI panels: an elegant native API for answering query(kind, arg) requests with per-resource cacheability metadata"
license = "MIT"
repository = "https://github.com/andyfischer/petal"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
