[package]
name = "petal"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
slotmap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
