[package]
name = "petal"
version = "0.1.0"
edition = "2024"
description = "The Petal programming language: compiler, IR, and evaluator"
license = "MIT"
repository = "https://github.com/andyfischer/petal"

[features]
default = []
wasm = ["wasm-bindgen"]
# Collect value-duplication statistics even in release builds. Stats are always
# collected in debug builds; this feature forces them on for release. See
# `src/stats.rs`.
dup-stats = []

[dependencies]
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
slotmap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

# Optimized profile for the binaries we ship in releases: smaller, faster.
# (`strip` removes debug symbols; `lto`/`codegen-units=1` trade build time for
# a leaner, faster binary.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
