[package]
name = "tree-sitter-petal"
description = "Petal grammar for tree-sitter"
version = "0.1.0"
authors = ["Petal"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "petal"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/andyfischer/petal"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]
build = "bindings/rust/build.rs"

[lib]
name = "tree_sitter_petal"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.26"
