[package]
name = "petal"
version = "0.1.0"
edition = "2021"
description = "Petal programming language - dataflow-first with inline state"
authors = ["Andy"]

[dependencies]
slotmap = "1.0"
smallvec = "1.11"
thiserror = "1.0"

[[bin]]
name = "petal"
path = "src/main.rs"

[[example]]
name = "live_edit_demo"
path = "examples/live_edit_demo.rs"

[[example]]
name = "differentiation_demo"
path = "examples/differentiation_demo.rs"

[lib]
name = "petal"
path = "src/lib.rs"
