[package]
name = "petal-fps"
version = "0.1.0"
edition = "2024"
description = "Hybrid Rust + Petal 3D first-person-shooter experiment"
license = "MIT"
repository = "https://github.com/andyfischer/petal"

[dependencies]
petal = { path = "../../rust" }
petal-ui = { path = "../../petal-ui" }
petal-sdl = { path = "../../integrations/petal-desktop-sdl" }
sdl2 = { version = "0.37", features = ["image", "ttf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
